2006-05-19  Adam Jocksch  <ajocksch@redhat.com>

	* cni/Elf.cxx (elf_getphdrs): Now uses elements to assign the items.

	* Elf.java (getPHeader): Renamed to getPHeaders, now returns an array of
	ElfPHeaders.
	(elf_getphdr): Renamed to elf_getphdrs.
	* ElfSection.java (getData): Now returns null if C function returns 0.
	* cni/Elf.cxx (elf_getphdr): Renamed to elf_getphdrs, returns an array
	of longs.
	* tests/TestElf.java (testOFile): Added, tests a provided .o file.
	* tests/helloworld.o.bz2.uu: Added.

2006-05-18  Adam Jocksch  <ajocksch@redhat.com>

	* Elf.java (getSection): Now returns null if index was invalid.
	(getNextSection): Now returns null if there is no next section.
	* ElfException.java (ElfException): Added, takes a string.
	* ElfKind.java (toString): Added.
	* ElfSection.java (getSectionHeader): Now returns null if no header
	found.
	* cni/Elf.cxx: (elf_begin): Now calls elf_version before calling
	elf_begin, also throws ElfExceptions in case of errors.
	* tests/TestElf.java: Added.

	* Elf.java (Elf): Now takes a boolean indicating whether the
	file is 32 or 64 bit.
	(clone): The new Elf object now has the same 32/64 bitness as
	the original.

	* Elf.java (clone): Added.
	(elf_clone): Now returns long and now only takes an int.
	* cni/Elf.cxx (clone): Now takes only an int and returns a long.

2006-05-17  Adam Jocksch  <ajocksch@redhat.com>

	* tests/test-core.tgz: Removed.
	* tests/test-core.bz2.uu: Added, replaces test-core.tgz.

	* tests: Added.
	* tests/test-core.tgz: Added, test core dump (uuencoded and zipped)
	to be used as a basis for libelf wrapper tests.

2006-05-16  Adam Jocksch  <ajocksch@redhat.com>

	* ElfEHeader.java (get_e_ident): Removed.
	(get_e_fileclass): Added.
	(get_e_dataencoding): Added.
	(get_e_fileversion): Added.
	(getIdentifier): Removed.
	(getFileClass): Added.
	(getDataEncoding): Added.
	(getFileVersion): Added.
	* ElfHeader32.java: Updated native methods to reflect change in
	superclass.
	* ElfHeader64.java: Ditto.